--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,2 @@
-EMAIL_USER=editorijsrijournal@gmail.com
-EMAIL_PASS=ywnr klyo voeo djye
+EMAIL_USER=editorijrwsjournal@gmail.com
+EMAIL_PASS=hols zchc gpsi klou
