--- a/client/package.json
+++ b/client/package.json
@@ -13,12 +13,14 @@
     "@tailwindcss/vite": "^4.1.8",
     "aos": "^2.3.4",
     "axios": "^1.10.0",
-    "framer-motion": "^12.18.1",
+    "framer-motion": "^12.23.12",
     "lucide-react": "^0.513.0",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
+    "pdfjs-dist": "^5.4.54",
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
-    "react-router-dom": "^7.6.2",
+    "react-pdf": "^10.0.1",
+    "react-router-dom": "^7.8.0",
     "swiper": "^11.2.8",
     "tailwindcss": "^4.1.8"
   },
