--- a/server/.env
+++ b/server/.env
@@ -1,4 +1,5 @@
 EMAIL_USER=editorijrwsjournal@gmail.com
 EMAIL_PASS=hols zchc gpsi klou
 PORT=5000
-MONGO_URI=mongodb://localhost:27017/ijrws
+MONGO_URI=mongodb+srv://editorijrwsjournal:<db_password>@cluster0.ifzskj4.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+
