--- a/server/.env
+++ b/server/.env
@@ -1,5 +1,5 @@
 EMAIL_USER=editorijrwsjournal@gmail.com
 EMAIL_PASS=hols zchc gpsi klou
 PORT=5000
-MONGO_URI=mongodb+srv://editorijrwsjournal:<Cjh2bGh3l5aSKHde>@cluster0.ifzskj4.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+MONGO_URI=mongodb+srv://editorijrwsjournal:Cjh2bGh3l5aSKHde@cluster0.ifzskj4.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 
